--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --hot --inline"
+    "start": "webpack-dev-server --hot --inline",
+    "rstart": "webpack-dev-server --hot --inline --config webpack.react.config.js"
   },
   "dependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "path": "^0.12.7",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   }
